--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 title: "Jekyll Resume Template"
 description: "A resume template for Jekyll and GitHub Pages sites."
 timezone: "Asia/Karachi"
+future: true
 
 # Build settings
 markdown: kramdown
