--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,10 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Ammar Hasan Razvi"
-resume_title:                   "Full Stack JavaScript Developer, Team Lead at Folio3 Software"
-resume_contact_email:
-  "ammar_rizvi@msn.com"
-resume_header_contact_info: "742 Evergreen Terrace, Springfield | 555-7334 | ammar_rizvi@msn.com"
-resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but K.I.S.S.</p>"
+resume_title:                   "Javascript Developer (Full Stack/Node.js/React/Frontend), Team Lead at Folio3 Software"
+resume_contact_email:           "ammar_rizvi@msn.com"
+resume_header_contact_info:     "ammar_rizvi@msn.com"
+resume_header_intro:            "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but K.I.S.S.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
@@ -39,7 +38,7 @@ resume_section_associations:    true
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
   resume_github_url:            "https://github.com/ammar-hasan"
-  resume_twitter_url:           "http://twitter.com/ammar-hasan"
+  resume_twitter_url:           "http://twitter.com/AmmarHasanRizvi"
   # resume_dribbble_url:          "https://dribbble.com/jag"
   # resume_facebook_url:          "insert Facebook URL here"
   resume_linkedin_url:          "https://www.linkedin.com/in/link2ammar"
