--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ resume_name:                    "Ammar Hasan Razvi"
 resume_title:                   "Javascript Developer (Full Stack/Node.js/React/Frontend), Team Lead at Folio3 Software"
 resume_contact_email:           "ammar_rizvi@msn.com"
 resume_header_contact_info:     "ammar_rizvi@msn.com"
-resume_header_intro:            "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but K.I.S.S.</p>"
+resume_header_intro:            "<p>I am dedicated programmer and a full-stack web developer, who is very much interested in solving the problems in the highest priority. I love the way JavaScript and Python work, and it keeps me interested to learn more and more about these nice languages.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
