--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -15,7 +15,7 @@
 - company: Folio3 Software
   position: Software Engineer
   duration: February, 2012 &mdash; December, 2013
-  summary: Ppplied the principles and techniques of computer science, engineering, and mathematical analysis to the design, development, testing, and evaluation of the software and the systems that enabled computers to perform their many applications.<ul><li>ASP.Net (Web Forms + MVC 4)<li>Html5 + Javascript + CSS3<li>CMS (DotNetNuke)<li>Windows Server 2008<li>Linux + Apache + VSFTPD Setups<li>Amazon Cloud Virtual Machines<li>TeamCity + MsBuild<li>Windows 8 Apps</ul>
+  summary: Applied the principles and techniques of computer science, engineering, and mathematical analysis to the design, development, testing, and evaluation of the software and the systems that enabled computers to perform their many applications.<ul><li>ASP.Net (Web Forms + MVC 4)<li>Html5 + Javascript + CSS3<li>CMS (DotNetNuke)<li>Windows Server 2008<li>Linux + Apache + VSFTPD Setups<li>Amazon Cloud Virtual Machines<li>TeamCity + MsBuild<li>Windows 8 Apps</ul>
 
 # Trainee Engineer
 - company: Folio3 Software
