--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -9,7 +9,7 @@
 - company: Folio3 Software
   position: Senior Software Engineer
   duration: January, 2014 &mdash; December, 2016
-  summary: Contributed in designing, coding and testing of multiple software projects, also mentored few of the resources. <ul> <li>Python: WxWidgets</li> <li>Python: Cross-platform Desktop App for Windows, Linux, OSX</li> <li>JavaScript: BackboneJS</li> <li>JavaScript: TaffyDB</li> <li>HTML5 & CSS3</li> <li>C#: ASP.Net MVC 4</li> </ul>
+  summary: Contributed in designing, coding and testing of multiple software projects, also mentored few of the resources. <ul> <li>Python - WxWidgets</li> <li>Python - Cross-platform Desktop App for Windows, Linux, OSX</li> <li>JavaScript - BackboneJS</li> <li>JavaScript - TaffyDB</li> <li>HTML5 & CSS3</li> <li>C# - ASP.Net MVC 4</li> </ul>
 
 # Software Engineer
 - company: Folio3 Software
