--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,19 +3,44 @@
 - company: Folio3 Software
   position: Lead Software Engineer
   duration: January, 2016 &mdash; Present
-  summary: In charge of multiple software projects; responsible for the underlying architecture for the software program, as well as for overseeing the work being done by any other software engineers working on the project. <ul><li>Scrum Master</li><li>Providing Estimates</li><li>Interviewing candidates</li><li>Angular 2.0, ReactJS, BackboneJS</li><li>MongoDB, SQL Server</li><li>ExpressJS</li><li>NodeJS</li><li>ArcGIS Maps SDK</li><li>JavaScript Code Reviewer</li></ul>
+  summary: |
+    In charge of multiple software projects; responsible for the underlying architecture for the software program, 
+    as well as for overseeing the work being done by any other software engineers working on the project.
 
 # Senior Software Engineer
 - company: Folio3 Software
   position: Senior Software Engineer
   duration: January, 2014 &mdash; December, 2016
-  summary: Contributed in designing, coding and testing of multiple software projects, also mentored few of the resources. <ul> <li>Python - WxWidgets</li> <li>Python - Cross-platform Desktop App for Windows, Linux, OSX</li> <li>JavaScript - BackboneJS</li> <li>JavaScript - TaffyDB</li> <li>HTML5 & CSS3</li> <li>C# - ASP.Net MVC 4</li> </ul>
+  summary: |
+    Contributed in designing, coding and testing of multiple software projects, also mentored few of the resources. 
+    <ul> 
+      <li>Python - WxWidgets</li> 
+      <li>Python - Cross-platform Desktop App for Windows, Linux, OSX</li> 
+      <li>JavaScript - BackboneJS</li> 
+      <li>JavaScript - TaffyDB</li> 
+      <li>HTML5 & CSS3</li> 
+      <li>C# - ASP.Net MVC 4</li>
+      <li>Markdown</li>
+      <li>Jsdoc Standard Documentation</li>
+    </ul>
 
 # Software Engineer
 - company: Folio3 Software
   position: Software Engineer
   duration: February, 2012 &mdash; December, 2013
-  summary: Applied the principles and techniques of computer science, engineering, and mathematical analysis to the design, development, testing, and evaluation of the software and the systems that enabled computers to perform their many applications.<ul><li>ASP.Net (Web Forms + MVC 4)<li>Html5 + Javascript + CSS3<li>CMS (DotNetNuke)<li>Windows Server 2008<li>Linux + Apache + VSFTPD Setups<li>Amazon Cloud Virtual Machines<li>TeamCity + MsBuild<li>Windows 8 Apps</ul>
+  summary: | 
+    Applied the principles and techniques of computer science, engineering, and mathematical analysis to the design, development, 
+    testing, and evaluation of the software and the systems that enabled computers to perform their many applications.
+    <ul>
+      <li>ASP.Net (Web Forms + MVC 4)
+      <li>Html5 + Javascript + CSS3
+      <li>CMS (DotNetNuke)
+      <li>Windows Server 2008
+      <li>Linux + Apache + VSFTPD Setups
+      <li>Amazon Cloud Virtual Machines
+      <li>TeamCity + MsBuild
+      <li>Windows 8 Apps
+    </ul>
 
 # Trainee Engineer
 - company: Folio3 Software
