--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,18 @@ resume_name:                    "Ammar Hasan Razvi"
 resume_title:                   "Javascript Developer (Full Stack/Node.js/React/Frontend), Team Lead at Folio3 Software"
 resume_contact_email:           "ammar_rizvi@msn.com"
 resume_header_contact_info:     "ammar_rizvi@msn.com"
-resume_header_intro:            "<p>I am dedicated programmer and a full-stack web developer, who is very much interested in solving the problems in the highest priority. I love the way JavaScript and Python work, and it keeps me interested to learn more and more about these nice languages.</p>"
+resume_header_intro:            |
+  <p>
+    The way JavaScript is expanding and evolving every year, 
+    it is speculated that JavaScript may become the next universal programming language. 
+    With an experience of 5+ years in professional Software programming, 
+    it is my mission to produce digital excellence and make the most satisfying 
+    User interfaces utilizing the energy of JavaScript. 
+  </p>
+  <p>
+    I have profound reverence for ReactJs, NodeJs and Redux, joined as a system, 
+    and a significant regard for AngularJs. Other than JavaScript, Python has been my unequaled top pick.
+  </p>
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
