--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -3,7 +3,7 @@
 # Languages
 - skill: Languages
   description: |
-    <ul>
+    <ul class="tags">
       <li>JavaScript</li>
       <li>Python</li>
       <li>C++</li>
@@ -14,8 +14,8 @@
 # Roles
 - skill: Roles
   description: |
-    <ul>
-      <li>Frontend Team Leader</li>
+    <ul class="tags">
+      <li>Team Leader</li>
       <li>Scrum Master</li>
       <li>Providing Estimates</li>
       <li>Interviewing candidates</li>
@@ -25,7 +25,7 @@
 # Frontend
 - skill: Frontend
   description: |
-    <ul>
+    <ul class="tags">
       <li>NodeJS</li>
       <li>Electron</li>
       <li>ReactJS</li>
@@ -38,7 +38,7 @@
 # Databases
 - skill: Databases
   description: |
-    <ul>
+    <ul class="tags">
       <li>SQLite3</li>
       <li>SQLCipher</li>
       <li>MongoDB</li>
@@ -49,7 +49,7 @@
 # ORMs
 - skill: ORMs
   description: |
-    <ul>
+    <ul class="tags">
       <li>Sequelize</li>
       <li>Entity Framework</li>
     </ul>
@@ -57,7 +57,7 @@
 # Integrations
 - skill: Integrations
   description: |
-    <ul>
+    <ul class="tags">
       <li>ArcGIS Maps SDK</li>
       <li>IPAWS</li>
     </ul>
