--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,11 @@
 # Degree
-- degree: Associates Degree, Business Management
-  uni: Springfield College
-  year: 1984 &mdash; 1986
-  awards: Quickest to fall asleep
-  summary: If you had any meaningful roles at college, feel free to write about them here
+- degree: MS in Computer Science and Information Technology
+  uni: NED University of Engineering Technologies 
+  year: 2016 &mdash; Present
+  summary: Learnt about Software Project Management, Expert based Systems and Financial Accounting
+
+- degree: BS in Telecommunications Engineering
+  uni: National University of Computer and Emerging Sciences (a.k.a FAST)
+  year: 2007 &mdash; 2011
+  awards: Cum Laude
+  summary: Learnt about Telecommunications, Networks, Electronics, Feedback Control Systems, Embedded Systems, Image Processing and Programming
