--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 _site
-.sass-cache
 .DS_Store
-_vendor
+.jekyll
+.jekyll-metadata
+.bundle
+.sass-cache
+Gemfile
+Gemfile.lock
+node_modules
+package.json
