--- a/_config.yml
+++ b/_config.yml
@@ -1,72 +1,86 @@
-# Site settings
-title: "Ammar Hasan Razvi"
-description: "Professional resume of Ammar Hasan Razvi."
-timezone: "Asia/Karachi"
-future: true
+#
+# This file contains configuration flags to customize your site
+#
 
-# Build settings
-markdown: kramdown
+# Name of your site (displayed in the header)
+name: Your Name
+
+# Short bio or description (displayed in the header)
+description: Web Developer from Somewhere
+
+# URL of your avatar or profile pic (you could use your GitHub profile pic)
+avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+
+#
+# Flags below are optional
+#
+
+# Includes an icon in the footer for each username you enter
+footer-links:
+  dribbble:
+  email:
+  facebook:
+  flickr:
+  github: barryclark/jekyll-now
+  instagram:
+  linkedin:
+  pinterest:
+  rss: # just type anything here for a working RSS icon
+  twitter: jekyllrb
+  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
+  youtube: # channel/<your_long_string> or user/<user-name>
+  googleplus: # anything in your profile username that comes after plus.google.com/
+
+
+# Enter your Disqus shortname (not your username) to enable commenting on posts
+# You can find your shortname on the Settings page of your Disqus account
+disqus:
+
+# Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
+google_analytics:
+
+# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
+# Used for Sitemap.xml and your RSS feed
+url:
+
+# If you're hosting your site at a Project repository on GitHub pages
+# (http://yourusername.github.io/repository-name)
+# and NOT your User repository (http://yourusername.github.io)
+# then add in the baseurl here, like this: "/repository-name"
+baseurl: ""
+
+#
+# !! You don't need to change any of the configuration flags below !!
+#
+
+permalink: /:title/
+
+# The release of Jekyll Now that you're using
+version: v1.2.0
+
+# Jekyll 3 now only supports Kramdown for Markdown
+kramdown:
+  # Use GitHub flavored markdown, including triple backtick fenced code blocks
+  input: GFM
+  # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
+  syntax_highlighter: rouge
+  syntax_highlighter_opts:
+    # Use existing pygments syntax highlighting css
+    css_class: 'highlight'
+
+# Set the Sass partials directory, as we're using @imports
 sass:
-  sass_dir: _sass
-  style: compressed
+  style: :expanded # You might prefer to minify using :compressed
 
-# Resume settings
-resume_avatar:                  "true"
-resume_name:                    "Ammar Hasan Razvi"
-resume_title:                   |
-  <div>
-    Javascript Developer (Full Stack/Node.js/React/Frontend)
-  </div>
-  <div>
-    Team Lead at Folio3 Software
-  </div>
-resume_contact_email:           "ammar_rizvi@msn.com"
-resume_header_contact_info:     "ammar_rizvi@msn.com"
-resume_header_intro:            |
-  <p>
-    The way JavaScript is expanding and evolving every year, 
-    it is speculated that JavaScript may become the next universal programming language. 
-    With an experience of 5+ years in professional Software programming, 
-    it is my mission to produce digital excellence and make the most satisfying 
-    User interfaces utilizing the energy of JavaScript. 
-  </p>
-  <p>
-    I have profound reverence for ReactJs, NodeJs and Redux, joined as a system, 
-    and a significant regard for AngularJs. Other than JavaScript, Python has been my unequaled top pick.
-  </p>
+# Use the following plug-ins
+gems:
+  - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
+  - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
 
-# use "yes" to display the email contact button,
-# "no" to display an "I'm not looking for work" message,
-# or remove the resume_looking_for_work option entirely
-# to leave blank
-resume_looking_for_work:        "yes"
-
-# Decide which sections to use
-# comment out to hide
-resume_section_experience:      true
-resume_section_education:       true
-resume_section_projects:        false
-resume_section_skills:          true
-resume_section_technologies:    true
-resume_section_recognition:     false
-resume_section_links:           false
-resume_section_associations:    false
-
-# Resume social links
-# uncomment the options you wish to display, and add your own URL
-resume_social_links:
-  resume_github_url:            "https://github.com/ammar-hasan"
-  resume_twitter_url:           "http://twitter.com/AmmarHasanRizvi"
-  # resume_dribbble_url:          "https://dribbble.com/jag"
-  # resume_facebook_url:          "insert Facebook URL here"
-  resume_linkedin_url:          "https://www.linkedin.com/in/link2ammar"
-  # resume_instagram_url:         "insert your Instagram URL here"
-  #resume_website_url:           "http://joelglovier.com"
-resume_print_social_links:      true
-
-# Design settings
-resume_theme:                   default
-
-# Note: when editing locally, remember to restart
-# your Jekyll server when you edit this file. Changes
-# to _config.yml are only recognized when the server starts
+# Exclude these files from your production _site
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - LICENSE
+  - README.md
+  - CNAME
